pastey-test-suite/tests/ui/unexpected-lifetime.stderr
error: unexpected lifetime
 --> tests/ui/unexpected-lifetime.rs:4:14
  |
4 |     fn [< 'a 'b >]() {}
  |              ^^
